# metasearch

./: .gitignore  README.md  example_app.py  pyproject.toml  requirements.txt  setup.py
metasearch/: __init__.py  config.py  engine.py  extractors.py  query_engine.py  scanner.py  storage.py  watchers.py
metasearch/plugins/: __init__.py  image_search.py  search_plugin.py  text_search.py
